--- a/AR Draw/Base.lproj/Main.storyboard
+++ b/AR Draw/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -21,23 +26,37 @@
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gOo-i1-BUp">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </arscnView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ewx-h8-X87">
-                                <rect key="frame" x="169" y="617" width="36" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ewx-h8-X87">
+                                <rect key="frame" x="152" y="612" width="70" height="35"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Draw"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="VYv-k1-Moh"/>
+                                    <constraint firstAttribute="width" constant="70" id="lpe-tq-q54"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Draw">
+                                    <color key="titleColor" red="1" green="0.26587878916359131" blue="0.14431613470095672" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <real key="value" value="17.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="gOo-i1-BUp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1nI-zV-Zrw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gOo-i1-BUp" secondAttribute="bottom" id="Bdx-Vq-p2i"/>
+                            <constraint firstItem="Ewx-h8-X87" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="IuP-kg-59g"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gOo-i1-BUp" secondAttribute="trailing" id="KkA-z5-pJy"/>
                             <constraint firstItem="gOo-i1-BUp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Vn9-8M-FeL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ewx-h8-X87" secondAttribute="bottom" constant="20" id="xxW-7Z-HWp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="draw" destination="Ewx-h8-X87" id="dlh-MB-na8"/>
                         <outlet property="sceneView" destination="gOo-i1-BUp" id="xqN-Za-Bpz"/>
                     </connections>
                 </viewController>
