--- a/AR Draw/Base.lproj/Main.storyboard
+++ b/AR Draw/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,15 +25,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gOo-i1-BUp">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </arscnView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ewx-h8-X87">
-                                <rect key="frame" x="152" y="612" width="70" height="35"/>
+                                <rect key="frame" x="150" y="613.5" width="75" height="33.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="VYv-k1-Moh"/>
-                                    <constraint firstAttribute="width" constant="70" id="lpe-tq-q54"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
                                 <state key="normal" title="Draw">
                                     <color key="titleColor" red="1" green="0.26587878916359131" blue="0.14431613470095672" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -46,11 +43,13 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="gOo-i1-BUp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1nI-zV-Zrw"/>
+                            <constraint firstItem="gOo-i1-BUp" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1nI-zV-Zrw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gOo-i1-BUp" secondAttribute="bottom" id="Bdx-Vq-p2i"/>
                             <constraint firstItem="Ewx-h8-X87" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="IuP-kg-59g"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gOo-i1-BUp" secondAttribute="trailing" id="KkA-z5-pJy"/>
                             <constraint firstItem="gOo-i1-BUp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Vn9-8M-FeL"/>
+                            <constraint firstItem="Ewx-h8-X87" firstAttribute="height" secondItem="gOo-i1-BUp" secondAttribute="height" multiplier="0.05" id="rSi-TP-yvF"/>
+                            <constraint firstItem="Ewx-h8-X87" firstAttribute="width" secondItem="gOo-i1-BUp" secondAttribute="width" multiplier="0.2" id="rm6-X2-Oyt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ewx-h8-X87" secondAttribute="bottom" constant="20" id="xxW-7Z-HWp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -62,6 +61,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="89.505247376311857"/>
         </scene>
     </scenes>
 </document>
